0027478: Configuration - avoid inclusion of Xlib.h within Graphic3d_GraphicDriver.hxx

Replace Aspect_DisplayConnection.hxx inclusion by forward declaration.